--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!doctype html>
 
 <head>
     <title>Login Page</title>
@@ -90,7 +90,7 @@
 
 <body>
     <form name="loginForm" method="post"
-        action="file:///D:/SIT%20Modules/Marine%20Programme/SIT/Modules/MNO1109%20Naval%20Architecture%201A/Common/html/hello%20world/MNO1109/MNO1109_main_page.html">
+        action="MNO1109_main_page.html">
         
         <table width="20%" bgcolor="0099CC" align="center">
             <h1>Sign Up/Log In to MNO1109 Online Lecture and Tutorial</h1>
