--- a/MNO1109_main_page.html
+++ b/MNO1109_main_page.html
@@ -68,7 +68,7 @@ session_start();
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='file:///D:/SIT%20Modules/Marine%20Programme/SIT/Modules/MNO1109%20Naval%20Architecture%201A/Common/html/hello%20world/MNO1109/MNO1109_Cp1.html'">
+                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp1.html'">
                     Chapter 1 Basic Quantities</button>
 
             </div>
@@ -77,7 +77,7 @@ session_start();
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='file:///D:/SIT%20Modules/Marine%20Programme/SIT/Modules/MNO1109%20Naval%20Architecture%201A/Common/html/hello%20world/MNO1109/MNO1109_Cp2.html'">
+                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp2.html'">
                     Chapter 2 Approximate Integration</button>
 
             </div>
@@ -86,7 +86,7 @@ session_start();
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='file:///D:/SIT%20Modules/Marine%20Programme/SIT/Modules/MNO1109%20Naval%20Architecture%201A/Common/html/hello%20world/MNO1109/MNO1109_Cp3.html'">
+                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109/MNO1109_Cp3.html'">
                     Chapter 3 List and trim</button>
 
             </div>
@@ -95,7 +95,7 @@ session_start();
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='file:///D:/SIT%20Modules/Marine%20Programme/SIT/Modules/MNO1109%20Naval%20Architecture%201A/Common/html/hello%20world/MNO1109/MNO1109_Cp4.html'">
+                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp4.html'">
                     Chapter 4 Flotation and Initial Stability</button>
 
             </div>
@@ -104,7 +104,7 @@ session_start();
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='file:///D:/SIT%20Modules/Marine%20Programme/SIT/Modules/MNO1109%20Naval%20Architecture%201A/Common/html/hello%20world/MNO1109/MNO1109_Cp5.html'">
+                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp5.html'">
                     Chapter 5 Combined List and Trim, Free Surface, Bilging</button>
 
             </div>
@@ -113,7 +113,7 @@ session_start();
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='file:///D:/SIT%20Modules/Marine%20Programme/SIT/Modules/MNO1109%20Naval%20Architecture%201A/Common/html/hello%20world/MNO1109/MNO1109_Cp6.html'">
+                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp6.html'">
                     Chapter 6 Large Angle Stability</button>
 
             </div>
