--- a/MNO1109_main_page.html
+++ b/MNO1109_main_page.html
@@ -65,7 +65,7 @@
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp1.html'">
+                    onclick="window.location.href ='MNO1109_Cp1.html'">
                     Chapter 1 Basic Quantities</button>
 
             </div>
