--- a/MNO1109_main_page.html
+++ b/MNO1109_main_page.html
@@ -74,7 +74,7 @@
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp2.html'">
+                    onclick="window.location.href ='MNO1109_Cp2.html'">
                     Chapter 2 Approximate Integration</button>
 
             </div>
@@ -83,7 +83,7 @@
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109/MNO1109_Cp3.html'">
+                    onclick="window.location.href ='MNO1109_Cp3.html'">
                     Chapter 3 List and trim</button>
 
             </div>
@@ -92,7 +92,7 @@
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp4.html'">
+                    onclick="window.location.href ='MNO1109_Cp4.html'">
                     Chapter 4 Flotation and Initial Stability</button>
 
             </div>
@@ -101,7 +101,7 @@
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp5.html'">
+                    onclick="window.location.href ='MNO1109_Cp5.html'">
                     Chapter 5 Combined List and Trim, Free Surface, Bilging</button>
 
             </div>
@@ -110,7 +110,7 @@
                 <!--SECTION 1-->
                 <!-- Trigger/Open The Modal -->
                 <button class="button"
-                    onclick="window.location.href ='tayzhiyung.github.io/MNO1109/MNO1109_Cp6.html'">
+                    onclick="window.location.href ='MNO1109_Cp6.html'">
                     Chapter 6 Large Angle Stability</button>
 
             </div>
